# jtstring

./: .gitignore  CMakeLists.txt
include/: jtstring.hpp
test/: compare_to_std.cpp
